traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:10: error: not found: value doite
    if(estFaceMur) doite();return(true)}
                   ^